manifests/element-call/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
  labels:
    app: element-call
spec:
  replicas: 1
  selector:
    matchLabels:
      app: element-call
  template:
    metadata:
      labels:
        app: element-call
    spec:
      containers:
      - name: element-call 
        image: ghcr.io/element-hq/element-call:v0.7.1
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: element-call-config
          mountPath: /app/config.json
          subPath: config.json
          readOnly: true
      volumes:
      - name: element-call-config
        configMap:
          name: element-call-config
